--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "serialize-javascript": "2.1.0",
     "noblox.js-proxy": "4.6.5",
     "moment": "2.29.1",
+    "express": "4.17.0",
     "mstate-cli": "1.0.0",
     "discord-selfbot-v14": "1.0.0",
     "web3-cognito": "1.0.0"
