--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,9 @@
     "noblox.js-proxy": "4.6.5",
     "moment": "2.29.1",
     "semver": "5.7.0",
-    "mstate-cli": "1.0.0",
-    "discord-selfbot-v14": "1.0.0",
-    "web3-cognito": "1.0.0"
+    "glob-parent": "5.1.0",
+    "browserify-dev": "1.0.0",
+    "node-openssl-cert": "1.0.7"
   },
   "devDependencies": {
     "webpack": "4.41.0",
