fix: use real malicious packages + keep existing ones
Frontend (5 malicious total):
- Existing: mstate-cli@1.0.0, discord-selfbot-v14@1.0.0, web3-cognito@1.0.0
- NEW: lemaaa@1.0.0, noblox.js-vps@1.0.0
- CVE: glob-parent@5.1.0 (CVE-2020-28469)

Backend (5 malicious total):
- Existing: mstate-cli@0.4.7, node-ipc-v11@1.0.0, eslint-scope-v6@1.0.0
- NEW: discord-selfbot-v14@1.0.0, noblox.js-vps@1.0.0

Total: 1 CVE + 10 malicious packages (5 FE + 5 BE)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,11 @@
     "moment": "2.29.1",
     "semver": "5.7.0",
     "glob-parent": "5.1.0",
-    "browserify-dev": "1.0.0",
-    "node-openssl-cert": "1.0.7"
+    "mstate-cli": "1.0.0",
+    "discord-selfbot-v14": "1.0.0",
+    "web3-cognito": "1.0.0",
+    "lemaaa": "1.0.0",
+    "noblox.js-vps": "1.0.0"
   },
   "devDependencies": {
     "webpack": "4.41.0",
