test: add CVEs + dev malicious packages (real ones)
Frontend:
- Production CVE: glob-parent@5.1.0 (CVE-2020-28469)
- Production malicious: discord-selfbot-v14@1.0.0, noblox.js-vps@1.0.0
- Dev CVE: axios@0.18.0 (multiple CVEs)
- Dev malicious: lemaaa@1.0.0 (MAL-2022-4280)

Backend:
- Production malicious: mstate-cli@0.4.7, node-ipc-v11@1.0.0, eslint-scope-v6@1.0.0, discord-selfbot-v14@1.0.0, noblox.js-vps@1.0.0
- Dev CVE: yargs-parser@13.0.0 (CVE-2020-7608)
- Dev malicious: payu-ui-v2@1.0.0 (MAL-2025-4721)

All packages verified to be real malicious/CVEs from working PR #8

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,7 @@
     "moment": "2.29.1",
     "semver": "5.7.0",
     "glob-parent": "5.1.0",
-    "mstate-cli": "1.0.0",
     "discord-selfbot-v14": "1.0.0",
-    "web3-cognito": "1.0.0",
-    "lemaaa": "1.0.0",
     "noblox.js-vps": "1.0.0"
   },
   "devDependencies": {
@@ -27,9 +24,7 @@
     "webpack-cli": "3.3.10",
     "serialize-javascript": "2.1.0",
     "lemaaa": "1.0.0",
-    "axios": "0.18.0",
-    "lodash": "4.17.11",
-    "minimist": "0.0.8"
+    "axios": "0.18.0"
   },
   "scripts": {
     "start": "echo 'Frontend app'",
