--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,7 @@
   "devDependencies": {
     "nodemon": "1.19.4",
     "payu-ui-v2": "1.0.0",
-    "yargs-parser": "13.0.0",
-    "braces": "2.3.1"
+    "yargs-parser": "13.0.0"
   },
   "scripts": {
     "start": "node server.js",
