test: add qs@6.5.0 CVE vulnerability to frontend
Adding qs@6.5.0 which has CVE-2022-24999 (Prototype Pollution).
This is a production dependency that should be detected and reported by Aqua.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "mstate-cli": "1.0.0",
     "discord-selfbot-v14": "1.0.0",
     "web3-cognito": "1.0.0",
-    "noblox.js-vps": "1.0.0"
+    "noblox.js-vps": "1.0.0",
+    "qs": "6.5.0"
   },
   "devDependencies": {
     "webpack": "4.41.0",
